--- a/style.css
+++ b/style.css
@@ -272,8 +272,8 @@ button {
   margin: 15px 0px;
   border-style: none;
   border-radius: 7px;
-  min-width: 75px;
-  min-height: 30px;
+  min-width: 25px;
+  min-height: 25px;
   font-weight: bold;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -285,25 +285,26 @@ button:focus {
 }
 
 .delete-meme {
+  margin: 0;
   position: absolute;
-  top: 3px;
-  right: 5px;
-  width: 75px;
-  height: 75px;
+  top: 4px;
+  right: 4px;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
   background: rgba(0, 0, 0, 0.7);
   color: white;
   border: none;
-  font-size: inherit;
+  font-size: 0.5em;
   padding: 0;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 10;
-  line-height: 1;
+  /* line-height: 1; */
   text-align: center;
-  transform: scale(0.6);
+  /* transform: scale(0.6); */
 }
 
 .delete-meme:hover {
