--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ input:required {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 .meme-text {
